--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -2,28 +2,57 @@
 <!doctype html>
 <html lang="en">
 <head>
-    {% block head %}
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content=""> {% block meta %} {% endblock %}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content=""> {% block meta %} {% endblock %}
 
-        <title>TUVERMIND {% block title %}{% endblock %}</title>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-                crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-                integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-                crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.css" %}"/>
-        <script src="{% static "bootstrap/js/bootstrap.js" %}"></script>
-    {% endblock %}
+  <title>TUVERMIND {% block title %}{% endblock %}</title>
+
+  {% block head %}{% endblock %}
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+          integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+          crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+          integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+          crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.css" %}"/>
+  <script src="{% static "bootstrap/js/bootstrap.js" %}"></script>
+
+  <link rel="stylesheet" href="{% static "startbootstrap-simple-sidebar/css/simple-sidebar.css" %}"/>
+  <script src={% static "startbootstrap-simple-sidebar/vendor/jquery/jquery.min.js" %}></script>
+  <script src={% static "startbootstrap-simple-sidebar/vendor/bootstrap/js/bootstrap.bundle.min.js" %}></script>
+  <script>
+    $(document).ready(
+      () => {
+        $("#menu-toggle").click(function (e) {
+          e.preventDefault();
+          $("#wrapper").toggleClass("toggled");
+        })
+      }
+    )
+  </script>
+
+  {% block js %}{% endblock %}
 </head>
 
 
 <body data-media-url="{% get_media_prefix %}">
-{% block content %}
-{% endblock %}
+
+{% include "side_bar.html" %}
+
+
+<main role="main" class="d-flex bg-dark text-light ">
+  <div class="mx-auto" style="width:18rem;">{# reservation space for sidebar #}</div>
+
+  <div class="w-100 mx-auto" style="margin-top: 4rem">
+    {% block content %} {% endblock %}
+  </div>
+  <div class="d-none d-md-flex mx-auto " style="width:4rem;">{# reservation space for sidebar #}</div>
+</main>
+
 </body>
 
 
