--- a/web/templates/weather/index.html
+++ b/web/templates/weather/index.html
@@ -1,43 +1,27 @@
 {% extends "base.html" %}
 
-{% load static %}
-
 {% block content %}
-    <div class="card mx-auto">
-        <div class="card-header">Погода</div>
-        <div class="card-body ">
+  <div class="col">
+    {% for group in weather.groups %}
 
-            {% for group in weather.groups %}
-                <div class="row">{{ group }}
+      <div class="card m-2 bg-dark">
 
-                    {% for item in weather.data %}
-                        {% if item.timestamp.date == group%}
-                            <div class="col mx-auto my-2">
-                                <div class="card">
-                                    <div class="card-header">{{ item.timestamp.time }}</div>
-                                    <div class="card-body">
-                                        <div class="row">
-                                            <div class="col">
-                                                <img src="{% get_media_prefix %}{{ item.weather.icon }}" height="50" width="50">
-                                            </div>
+        <div class="card-header font-weight-bold text-center">{{ group|date:"l j E" }}</div>
 
-                                            <div class="col">
-                                                <p class="my-1">{{ item.get_min_temp }}...{{ item.get_max_temp }}</p>
-                                                <p class="my-1">{{ item.wind_speed }}</p>
-                                                <p class="my-1">{{ item.humidity }}</p>
-                                                <p class="my-1">{{ item.pressure }}</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        {% endif %}
-                    {% endfor %}
+        <div class="card-body">
 
-                </div>
+          <div class="row">
+            {% for item in weather.data %}
+              {% if item.timestamp.date == group %}
+                {% include 'weather/parts/weather_card.html' %}
+              {% endif %}
             {% endfor %}
+          </div>
 
         </div>
-    </div>
 
+      </div>
+    {% endfor %}
+  </div>
 {% endblock %}
+
