--- a/web/templates/weather/index.html
+++ b/web/templates/weather/index.html
@@ -4,9 +4,13 @@
   <div class="col">
     {% for group in weather.groups %}
 
-      <div class="card m-2 bg-dark">
+      <div class="card m-2 bg-dark my-5">
 
-        <div class="card-header font-weight-bold text-center">{{ group|date:"l j E" }}</div>
+        <div class="card-header">
+          <h3 class="font-weight-bold text-center">
+            {{ group|date:"l j E" }}
+          </h3>
+        </div>
 
         <div class="card-body">
 
