--- a/web/templates/weather/parts/weather_card.html
+++ b/web/templates/weather/parts/weather_card.html
@@ -6,7 +6,7 @@
     <table class="table table-borderless table-striped ">
       <thead>
       {% if group == weather.groups.0 %}
-        <tr>
+        <tr  class="text-secondary">
           <th scope="col">Время</th>
           <th scope="col" class="text-monospace">{{ item.timestamp.time }}</th>
         </tr>
@@ -17,26 +17,26 @@
       <tr>
         <td colspan="2">
           <div class="d-flex justify-content-center">
-            <img src="{% get_media_prefix %}{{ item.weather.icon }}" height="50" width="50">
+            <img src="{% get_media_prefix %}{{ item.weather.icon }}" height="60" width="60">
           </div>
 
         </td>
       </tr>
       <tr>
-        <td>Температура</td>
+        <td class="align-middle my-auto">Температура</td>
         <td class="font-weight-bold">{% include "weather/parts/temperature_coloring.html" %}</td>
       </tr>
-      <tr>
-        <td>Ветер</td>
-        <td>{{ item.wind_speed }}</td>
+      <tr class="small">
+        <td class="text-secondary">Ветер</td>
+        <td>{{ item.wind_speed }} м/с</td>
       </tr>
-      <tr>
-        <td>Влажность</td>
-        <td>{{ item.humidity }}</td>
+      <tr class="small">
+        <td class="text-secondary">Влажность</td>
+        <td>{{ item.humidity }} %</td>
       </tr>
-      <tr>
-        <td>Давление</td>
-        <td>{{ item.pressure }}</td>
+      <tr class="small">
+        <td class="text-secondary">Давление</td>
+        <td>{{ item.pressure }} мм</td>
       </tr>
       </tbody>
     </table>
