--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>There is no any UI for app.</h1>
-<p>Check <a href="{% url 'api' %}">api</a> if you need.</p>
+<p>Check <a href="{% url 'api-root' %}">api</a> if you need.</p>
 </body>
 </html>
